--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 <style>
   body {
-/*     background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%); */
-    background: red;
+    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
   }
 
   .btn {
