--- a/index.html
+++ b/index.html
@@ -1,113 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-</head>
-<style>
-  body {
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-    background: linear-gradient(263deg, rgba(133, 133, 133, 1) 0%, rgba(0, 0, 0, 0.8911939775910365) 26%, rgba(64, 64, 64, 1) 85%, rgba(133, 133, 133, 1) 98%);
-  }
-
-  .btn {
-    width: 75px;
-    height: 75px;
-    color: aliceblue;
-    font-size: 20px;
-    margin: 10px;
-    float: left;
-    border: 1px solid grey;
-    border-radius: 15px;
-    box-shadow: 5px 1px 10px grey inset;
-  }
-  .btn:hover {
-    color: white;
-    border: 1px solid white;
-  }
-  .calculator {
-    width: 400px;
-    height: 500px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  .output {
-    height: 50px;
-    background-color: lightgray;
-    font-size: 20px;
-    line-height: 50px;
-    margin-bottom: 10px;
-  }
-</style>
-
-<body class="bg-dark">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-sm-12 col-md-8 col-lg-6 col-xl-6 col-12">
-        <div class="calculator text-center my-5 py-5">
-          <div class="output" style="width: 100%; border-radius: 20px;">
-            <span id="expression">0</span>
-          </div>
-          <button class="btn" id="7">7</button>
-          <button class="btn" id="8">8</button>
-          <button class="btn" id="9">9</button>
-          <button class="btn" id="plus">+</button>
-          <button class="btn" id="4">4</button>
-          <button class="btn" id="5">5</button>
-          <button class="btn" id="6">6</button>
-          <button class="btn" id="minus">-</button>
-          <button class="btn" id="1">1</button>
-          <button class="btn" id="2">2</button>
-          <button class="btn" id="3">3</button>
-          <button class="btn" id="multiply">*</button>
-          <button class="btn" id="0">0</button>
-          <button class="btn" id="clear">AC</button>
-          <button class="btn" id="equ☻als">=</button>
-          <button class="btn" id="divide">/</button>
-        </div>
-
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body style="margin: 0%">
+    <div>
+      <img src="./web-variation-2 (1).png" height="100%" width="100%" alt="" />
     </div>
-  </div>
-
-  <script>
-    const output = document.querySelector("#expression");
-    const btns = document.querySelectorAll(".btn");
-    btns.forEach(function (btn) {
-      btn.addEventListener("click", function (e) {
-        const value = e.target.innerText;
-        if (value === "AC") {
-          output.innerText = 0;
-        } else if (value === "=") {
-          output.innerText = eval(output.innerText);
-        }
-        else {
-          if (output.innerText === "0") {
-            output.innerText = value;
-          }
-          else {
-            output.innerText += value;
-          }
-        }
-      });
-    });
-  </script>
-</body>
-
+  </body>
 </html>
